16tdjf: fix collapse

--- a/styles/product-page/components/product-inventory-locations.scss
+++ b/styles/product-page/components/product-inventory-locations.scss
@@ -1,5 +1,6 @@
 .de-collapse {
   max-height: 0;
+  overflow: hidden;
   transition-duration: 300ms;
   opacity: 0;
 
